--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "name": "ollama-tg-bot",
   "private": true,
   "main": "src/index.ts",
-  "peerDependencies": {
-    "typescript": "^5"
+  "version": "1.0.0",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "bun:build": "bun run src/index.ts",
+    "bun:start": "bun run dist/index.js"
   }
 }
