--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "ollama": "^0.6.2",
-    "typescript-telegram-bot-api": "^0.10.0"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.3.1",
-    "tsx": "^4.20.6"
-  },
   "name": "ollama-tg-bot",
-  "private": true,
   "main": "src/index.ts",
   "version": "1.0.0",
   "scripts": {
@@ -17,5 +7,12 @@
     "start": "node dist/index.js",
     "bun:build": "bun run src/index.ts",
     "bun:start": "bun run dist/index.js"
+  },
+  "dependencies": {
+    "@types/bun": "^1.3.3",
+    "@types/node": "^24.10.1",
+    "dotenv": "^17.2.3",
+    "ollama": "^0.6.3",
+    "typescript-telegram-bot-api": "^0.10.0"
   }
 }
