--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^17.2.3",
     "ollama": "^0.6.3",
     "typescript-telegram-bot-api": "^0.10.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
